--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
+    "lint:fix": "prettier --write 'src/**/*.ts'",
     "e2e": "ng e2e",
     "precommit": "lint-staged"
   },
